# Local-Jarvis

./: .env  main.py  pyproject.toml  requirements.txt
agents/: agent.py  automation_tools.py  file_tools.py  media_tools.py  system_tools.py  tools.py  vision_tools.py  web_tools.py
brain/: cloud_llm.py  router.py
core/: display.py  safety.py
memory/: filter.py  memory.py  processor.py  store.py
vision/: analyze.py  screen.py
voice/: voice.py  wake_word.py
